# coding_bootcamp

./: README.md
library_basics/: CMakeLists.txt
library_basics/include/: book.h  get_terminal_length.h  user.h
library_basics/src/: main.cpp
library_basics/src/classes/: book.cpp  user.cpp
library_basics/src/helpers/: get_terminal_length_linux.cpp  get_terminal_length_windows.cpp
pointers/: CMakeLists.txt
pointers/src/: main.cpp
